--- a/week1/presentations/01_intro_to_dataviz.qmd
+++ b/week1/presentations/01_intro_to_dataviz.qmd
@@ -22,6 +22,14 @@ logo: "../hds_images/logo_white.png"
 
 ## Goals
 
+1.  Data Visualization Today
+2.  Myths about data visualization
+
+::: notes
+1.  the *importance* of Data Visualization Today
+2.  *yet* still some myths about data visualizations remain
+:::
+
 # Why Data Viz?
 
 <!--COVID - first visualized disaster?-->
@@ -36,17 +44,64 @@ How did epidemiologists, health professionals, journalists, and educators try to
 
 ![COVID-19 Flatten the curve graphic](images/COVID_flatten-the-curve.jpg){fig-alt="COVID-19 Flatten the curve graphic"}
 
+::: notes
+This is now one of the most famous data visualizations in history.
+
+Certainly the most famous and impactful in recent years.
+
+The interesting thing: the data in this "data visualization" are not real. Rather, its based on hypothetical data.\
+\
+Question: do you remember when you first saw this graphic. Did you understand what it meant?
+
+I didn't. I needed it explained - either in a news article or by a television commentator.
+:::
+
 ## "Flatten the Curve"
 
-2007 paper, "Interim pre-pandemic planning guidance"
+2007 CDC paper, "Interim pre-pandemic planning guidance"
 
-![The original "flatten the curve" graphic](https://images.fastcompany.com/image/upload/f_webp,q_auto,c_fit,w_768/wp-cms/uploads/2020/03/i-5-cdc-orig-90474434-the-best-sources-for-tracking-covid-19-according-to-mapping-experts.jpg)
+![The original "flatten the curve" graphic (CDC 2007)](https://images.fastcompany.com/image/upload/f_webp,q_auto,c_fit,w_768/wp-cms/uploads/2020/03/i-5-cdc-orig-90474434-the-best-sources-for-tracking-covid-19-according-to-mapping-experts.jpg)
+
+::: notes
+The "flatten the curve" plot, however, was first designed years earlier. In 2007, the CDC created the first version of the plot in a paper outlining how to prepare for a hypothetical pandemic.
+:::
 
 ------------------------------------------------------------------------
 
 ![Slavea Chankova's adaptation of the 2007 visualization, re-purposed for COVID-19. ["Covid-19 is now in 50 countries and things will get worse"](https://www.economist.com/briefing/2020/02/29/covid-19-is-now-in-50-countries-and-things-will-get-worse?irclickid=yhkzq9STuxyKRusXQ72pWXmeUkswTkzBRRg4z80&irgwc=1&utm_medium=affiliates.offer.pd&utm_source=impact-apac&utm_campaign=a.new_july_2024_apac_lp&utm_content=conversion.direct-response.non-subscriber.apac_all_enfactum&utm_term=10078&channel=Impact) The Economist (Feb 29, 2020).](https://images.fastcompany.com/image/upload/f_webp,q_auto,c_fit,w_768/wp-cms/uploads/2020/03/i-6-90474434-the-best-sources-for-tracking-covid-19-according-to-mapping-experts.jpg)
 
+::: notes
+On Feb 29, 2020, Slavea Chankova of *The Economist* adapted the 2007 graphic to educate readers how to handle COVID-19 as it began to spread beyond China.
+:::
+
 ------------------------------------------------------------------------
+
+![Alternative "flatten the curve" graphic](images/flatten-the-curve_alt.png)
+
+---
+
+[Video from March 12, 2020](https://abcnews.go.com/Health/video/flattening-curve-coronavirus-matters-69555459)
+
+---
+
+## Data Viz Lessons:
+
+Andy Krackov (data analyst):
+
+1.  Headlines matter
+2.  Annotations are good.
+3.  Know your users.
+4.  Animations / drawing great.
+
+::: notes
+1.  Headlines matter. Don’t go generic when we need to tell people that they need to pay attention. Use a chart headline that helps orient the reader.
+2.  Annotations are good. I mean, with flattening the curve, you don’t even need numbers. Just make sure your explanations have clear messages in easy-to-read type.
+3.  Know your users. For example, many of us encounter visualizations on COVID-19 while we’re on our phones — which can make it difficult to digest what we see. Keep in mind that mobile experience.
+4.  Animations are great, but if you’re in a face-to-face setting, so is
+    drawing out the concept live on a white board or a sheet of paper.
+:::
+
+---
 
 "The first visualized global crisis in history"
 
@@ -56,11 +111,23 @@ How did epidemiologists, health professionals, journalists, and educators try to
 
 ![Table of contents from New York Times COVID-19 visualization dashboard](images/COVIDgraphics_NYT.png)
 
+::: notes
+I remember regularly visiting the NYT COVID-19 dashboard to see whether cases were rising or falling here.
+:::
+
 ------------------------------------------------------------------------
 
 ------------------------------------------------------------------------
 
 ![New York Times COVID Tracker](images/COVIDhistory_NYT.png)
+
+::: notes
+The problem with some of these dashboards? All this data was a week or more behind. By the time cases were reported and people hospitalized, the illness
+:::
+
+## Coronavirus Simulation
+
+[Covid Simulator](https://www.washingtonpost.com/graphics/2020/world/corona-simulator/) (*Washington Post,* March 14, 2020)
 
 # Climate Change
 
@@ -68,7 +135,12 @@ How did epidemiologists, health professionals, journalists, and educators try to
 
 ![The iconic "hockey stick" graph that became the focus of intense climate debate. First published by Michael Mann, Raymond S. Bradley, and Malcolm Hughes in "Northern hemisphere temperatures during the past millennium: Inferences, uncertainties, and limitations," Geophysical Research Letters (1999). It achieved a wider audience with its publication in a 2001 report by the Intergovernmental Panel on Climate Change of the United Nations.](https://psu-gatsby-files-prod.s3.amazonaws.com/s3fs-public/hockeystick.gif)
 
+::: notes
+:::
+
 ------------------------------------------------------------------------
+
+Al Gore, *An Inconvenient Truth* and ["off-the-charts" climate change](https://www.youtube.com/watch?v=9tkDK2mZlOo)".
 
 ------------------------------------------------------------------------
 
@@ -76,9 +148,15 @@ How did epidemiologists, health professionals, journalists, and educators try to
 
 <!--ELECTION MAPS, GRAPHS, NYT NEEDLE-->
 
+::: notes
+:::
+
 # Visualized Elections
 
 ![CNN Electoral results from 2024 presidential election](images/CNN_pres-elec-2024_map.png){fig-alt="Map showing which states were awarded to Trump and Harris"}
+
+::: notes
+:::
 
 ------------------------------------------------------------------------
 
@@ -88,13 +166,24 @@ How did epidemiologists, health professionals, journalists, and educators try to
 
 ![New York Times election needle (election night Nov. 2020)](images/NYT_election-needle_2020.png)
 
+::: notes
+:::
+
 # Data Viz: not always scary
 
 ![](images/restaurant_how-busy.png)
 
+::: notes
+:::
+
 ------------------------------------------------------------------------
 
 ![The Pudding's study of music genres (according to Spotify)](images/music-genres_spotify.png)
+
+::: notes
+:::
+
+---
 
 ["Music genres"](https://pudding.cool/2023/10/genre/) *The Pudding* (October 2023).
 
@@ -102,15 +191,24 @@ How did epidemiologists, health professionals, journalists, and educators try to
 
 ![The separation of "Latin" music into sub-genres (The Pudding).](images/music-latin-genres_spotify.png)
 
+::: notes
+:::
+
 # Data Viz: Not always impersonal
 
 ![](images/emotion-wheel.png)
 
 ["Emotion Wheel"](https://pudding.cool/2022/12/emotion-wheel/) *The Pudding* (Dec. 2022).
 
+::: notes
+:::
+
 ------------------------------------------------------------------------
 
 ![](images/emotion-wheel2.png)
+
+::: notes
+:::
 
 # Data Viz: Not always big (or even digital)
 
@@ -123,6 +221,9 @@ How did epidemiologists, health professionals, journalists, and educators try to
 Giorgia Lupi and Stefanie Posavec, [\*Dear Data\*](https://www.dear-data.com/theproject) (Princeton: Princeton Architectural Press, 2016).
 
 <!--UBIQUITOUS USE - DAILY EXAMPLES - RESTAURANT - HOW BUSY; OTHERS??-->
+
+::: notes
+:::
 
 # Data Viz: The Course
 
