--- a/week2/presentations/02_how-plots-lie.qmd
+++ b/week2/presentations/02_how-plots-lie.qmd
@@ -19,22 +19,28 @@ format:
 editor: visual
 ---
 
-:::
+# Interactive Review
 
-# Review Task
-
-Review the following X data visualizations. For each:
+Review the following 5 sets of data visualizations. For each:
 
 1.  Identify how it may be misleading. What choices did the creator of the visualization make that may mislead the viewer?
 2.  Propose a solution: what can be changed about this graphic to make it more truthful?
 
 # Example 1: Temperature Graphs
 
-![A Climate chart posted by the National Review in 2015.](images/PDF16.NationalReviewTemperatures.svg)
+![A Climate chart posted by the *National Review* in 2015.](images/PDF16.NationalReviewTemperatures.svg)
 
-------------------------------------------------------------------------
+::: notes
+### Problem?
+
+While technically correct in the sense that the data on the x and y axes are accurate; this is extremely misleading. As a response in the *Washington Post* points out, the scale of the graphic, "intentionally hides the actual change in the temperatures. Its akin to suggesting that Shaquille O'Neal and Mini-Me are the same height because they're both tiny compared to the planet Jupiter."
+:::
 
 ![Adding meaningful context to the National Review climate chart.](images/PDF18.NationalReviewGOOD.svg)
+
+::: notes
+any thing outside the white would mean an apocalypse: the collapse of most of humanity
+:::
 
 ------------------------------------------------------------------------
 
@@ -55,16 +61,15 @@ Review the following X data visualizations. For each:
     -   Choose a meaningful time range (x axis)
 
 ::: notes
-choropleth maps - elections vs. UFO
-
-DACA graphic
-
-adjust currency by years
 :::
 
 # Example 2
 
 ![From Alberto Cairo, \*How Charts Lie\*, Ch. 4.](images/PDF9.BiggestBoxOfficeBLUE.png)
+
+::: notes
+### Problem?
+:::
 
 ------------------------------------------------------------------------
 
@@ -78,7 +83,7 @@ adjust currency by years
 
 ![Using a different measure of box office success: revenue vs. budget. Cairo, Ch. 4.](images/PDF12.BudgetVersusBoxOffice.png)
 
-## Problem
+## Solution
 
 -   Need to normalize numbers
 
@@ -89,6 +94,14 @@ adjust currency by years
 # Example 3
 
 ![UFO sightings according to dataset compiled by the National UFO Reporting Center.](images/nuforc_ufo-sightings-map.png)
+
+::: notes
+### Problem?
+:::
+
+------------------------------------------------------------------------
+
+![UFO sightings (2001 - 2020) hot spots adjusted for population (county sightings per 10,000 people).](images/Medina_etal2023_UFO-hotspots_popstd.png)
 
 # Example 4
 
