--- a/week1/presentations/02_history_of_dataviz.qmd
+++ b/week1/presentations/02_history_of_dataviz.qmd
@@ -32,12 +32,20 @@ In an earlier lesson we discussed the importance of this graphic in educating pe
 
 *Interesting: this "data visualization" is not based on any real data. Rather, it exploited the fact that many people worldwide had learned the symbolic language of data visualization.*\
 \
-For seasoned readers of such visualizations, it is easy to take for granted all the implicit messages they convey. For example, many of us just intuit that the x axis represents the passage of time, the higher the location on the y axis - the higher the value, and that a steep upward slopes indicates a sharp increase.
+For seasoned readers of such visualizations, it is easy to take for granted all the implicit messages they convey. For example, many of us just intuit that the x axis represents the passage of time, and the higher the location on the y axis - the higher the value, and that a steep upward slopes indicates a sharp increase.
 
 However, even in 2020, not all people initially understood this graphic. And, for most of human history, such charts would have been illegible.
 :::
 
 # What was the world's first visualization?
+
+::: notes
+So, how did humans first begin creating data visualizations? How did they come to decipher and understand them?
+
+An examination of the history of data visualizations will help us better understand the moment we live in now: a moment where data visualizations and maps have become essential tools for explaining the world we live in. It will also help us recognize how particular symbols or visual choices came to represent particular types of data.
+
+But, first, we should talk about what a data visualization is.
+:::
 
 ## What makes a data visualization?
 
@@ -49,15 +57,57 @@ Alberto Cairo:
 
 -   **infographic**: "multi-section visual representation of information intended to communicate one or more specific messages"
 
--   **data visualization**: "display of data designed to analysis, exploration, and discovery."
+-   **data visualization**: "display of data designed for analysis, exploration, and discovery."
+
+::: notes
+In *A Truthful Art*, Alberto Cairo defines what a visualization is as well as some common sub-types of visualizations, including maps, charts & plots, infographics, and data visualizations. This can get a little confusing. But, essentially, in designing a visualization you should keep in mind the following questions:
+:::
+
+## Visualization Design Questions
+
+-   What is the purpose of the visualization? (to explore unfamiliar data, uncover hidden patterns, analyze relationships, communicate results, tell a story, etc.?)
+
+    -   How much of the interpretation is left to the reader?
+
+-   Who is the intended audience?
+
+::: notes
+-   What is the purpose of the visualization? (to explore unfamiliar data, uncover hidden patterns, analyze relationships, communicate results, tell a story, etc.?)
+
+    -   How much of the interpretation is left to the reader? (To what extent are you trying to convey a specific message? Or, on the other end of the spectrum, leaving the interpretation open to the reader?)
+
+<!-- -->
+
+-   Who is the intended audience? (often, early in the process, the principal intended audience is yourself. You are seeking insights or lessons from large or unfamiliar datasets; later in the process, the intended audience may be your instructor or thesis advisor, experts in your field, or a broader, more general audience for a popular publication)
+:::
 
 # Origins of Modern Data Visualization
 
 ## Pre-Modern Maps
 
+::: notes
+the first visualization was likely a map created thousands of years ago....
+:::
+
+## The Oldest Map in the World?
+
+!["Map" of a river-side settlement, engraved in a mammoth tusk ca. 10,000 BCE. Tusk found in Mezhirich, Ukraine.](images/Screen_Shot_2019-08-27_at_10.36.08_AM.png)
+
+::: notes
+The first human mapmaker likely etched the world's first map into the bark of a tree, onto the walls of a cave, or, perhaps, into the tusk of mammoth. Some scholars identify engravings etched into a 12,000 year old mammoth tusk in Ukraine as the oldest known map in the world. Early people likely created these maps to situate themselves in their landscape and show the relative location of water or food sources, nearby towns, or sacred sites.
+:::
+
+---
+
+![Bedolina Map](images/bedolina.jpg)
+
 ## A Scottish Scoundrel & Spy (and Data Viz Innovator)
 
 ::: notes
+This story begins in eighteenth-century Europe. If we were able to cast a wider net in search for foundational figures in the history of visualizations, perhaps this story would begin in 13th-century Japan, the Yucatán peninsula during the 8th century, or the Middle East or Africa five thousand years ago. Yet, whatever contributions such long forgotten graphics innovator may have made, it does not appear to have redounded to the present.
+
+Instead, the best information available to us identifies one of the key founders of modern visualizations to be William Playfair, a Scottish failed businessman, a blackmailer, and a rascal: in short, William PLayfair was a scoundrel and spy.... but also data viz innovator.
+
 Cara Giaimo, ["The Scottish Scoundrel who Changed how we see Data,"](https://www.atlasobscura.com/articles/the-scottish-scoundrel-who-changed-how-we-see-data) *Atlas Obscure* (2016).
 
 also [William Playfair](https://www.scotsmagazine.com/articles/series/william-playfair/) in *A-Z of Great Scots.*
@@ -65,9 +115,31 @@ also [William Playfair](https://www.scotsmagazine.com/articles/series/william-pl
 Cairo, *How Charts Lie,* p. 23 and Tufte, Ch. 1 also discuss Playfair
 :::
 
+## William Playfair
+
+(1759 - 1823)
+
+"As the knowledge of mankind increases, and transactions multiply, it becomes more and more desirable to abbreviate and facilitate the modes of conveying information."
+
+Cara Giaimo, ["The Scottish Scoundrel who Changed how we see Data,"](https://www.atlasobscura.com/articles/the-scottish-scoundrel-who-changed-how-we-see-data) *Atlas Obscure* (2016).
+
+::: notes
+In Playfair's time, respected writers persuaded through rhetorical means alone. Illustrations, on the other hand, were not for the serious.
+
+Growing up fatherless, William was largely raised by his older brother John, who had William record the temperature every day from their home. This ingrained in him the habit of recording and interpreting data.
+
+In 1786, he published the *Commercial and Political Atlas* where he used new means of visualizing data to help readers understand complex issues at a glance. He wrote:
+
+"As the knowledge of mankind increases, and transactions multiply, it becomes more and more desirable to abbreviate and facilitate the modes of conveying information."
+:::
+
 ## First Line Plot? (1786)
 
 ![William Playfair published perhaps the world's first "statistical graphic" in his \*Commercial and Political Atlas\*, which was printed in 1786.](images/Playfair_TimeSeries-2.png){fig-alt="Line chart and time-series graphic where the x axis represents years between 1700 and 1780 and the y axis represents number of exports / imports in thousands. Shows two lines, the number imports from and the number of exports to Denmark and Norway."}
+
+::: notes
+As innovative and groundbreaking this chart was for its time, now, 2.5 centuries later it looks relatively familiar. What can you learn from this chart? What is missing?
+:::
 
 ## First Bar Chart? (1786)
 
@@ -85,6 +157,10 @@ Cairo, *How Charts Lie,* p. 23 and Tufte, Ch. 1 also discuss Playfair
 
 ![Playfair's "Chart of Universal Commercial History" tracking the rise and fall of "powerful and wealthy nations" (1805).](images/Playfair_Chart_of_Universal_Commercial_History_1805.jpg)
 
+---
+
+[![Ridgeline plot from the d3.js Graph Gallery](images/block_ridgeline.png){fig-alt="Ridgeline plot from the d3.js graph gallery webpage showing the time of day different sports are most commmonly practiced."}](https://d3-graph-gallery.com/ridgeline.html)
+
 ## Mixed Plots
 
 ![Mixed bar and line plots (1821).](images/Playfair_bar-and-line-plots_1821.png)
@@ -97,7 +173,7 @@ Cairo, *How Charts Lie,* p. 23 and Tufte, Ch. 1 also discuss Playfair
 
 ## Early Maps
 
-![The Yü Chi Thu Map (China, 11th century A.D.): an example of a sophisticated geographic map centuries before the creation of the first "data" or "statistical maps".](images/Tufte_21_Chinese-map_cropped.png){alt="The Yü Chi Thu Map (China, 11th century A.D.): an example of a sophisticated geographic map centuries before the creation of the first \"data\" or \"statistical maps\"."}
+![The Yü Chi Thu Map (China, 11th century A.D.): an example of a sophisticated geographic map centuries before the creation of the first "data" or "statistical maps".](images/Tufte_21_Chinese-map_cropped.png)
 
 ## An Early Road Atlas
 
