add and revise nb 04 in tdi_workshop

--- a/tdi_workshop/04_gapminder_viz.qmd
+++ b/tdi_workshop/04_gapminder_viz.qmd
@@ -6,7 +6,9 @@ editor: visual
 jupyter: ir
 ---
 
-## 
+# Customizing R Visualizations
+
+### with ggplot and plotly
 
 ```{r}
 library(tidyverse)
@@ -35,7 +37,7 @@ library(tidyverse)
     Now let's import this dataset:
 
 ```{r}
-gapdf <- read.csv("../data/gapminder.csv")
+gapdf <- read.csv("data/gapminder.csv")
 head(gapdf)
 ```
 
