--- a/tdi_workshop/notebooks/02_ggplot-weatherdata.qmd
+++ b/tdi_workshop/notebooks/02_ggplot-weatherdata.qmd
@@ -17,7 +17,7 @@ library(tidyverse)
 ## 1.2 import data
 
 ```{r}
-year_avgs <- read.csv("data/Hanover_temp-yearaverages.csv", row.names=1)
+year_avgs <- read.csv("../data/Hanover_temp-yearaverages.csv", row.names=1)
 
 tail(year_avgs)
 ```
@@ -59,7 +59,7 @@ ggplot(year_avgs_wide |> filter(Year<2025), aes(x=Year)) +
 ## 3.1 Import data
 
 ```{r}
-temps <- read.csv("data/Hanover_temps2.csv")
+temps <- read.csv("../data/Hanover_temps2.csv")
 ```
 
 ## 3.2 Examine daily temperature data
